WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110421
[WinCE] Link error - missing method createDragImageFromImage()
https://bugs.webkit.org/show_bug.cgi?id=110421
Summary
[WinCE] Link error - missing method createDragImageFromImage()
Mark Salisbury
Reported
2013-02-20 17:49:43 PST
I see a link error compiling for WinCE. ClipboardWin.cpp expects to be able to call createDragImageFromImage() but it is not implemented for WinCE (today WinCE does not use Cairo or Core Graphics).
Attachments
Proposed fix
(1.74 KB, patch)
2013-02-20 18:04 PST
,
Mark Salisbury
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Salisbury
Comment 1
2013-02-20 18:04:16 PST
Created
attachment 189435
[details]
Proposed fix
Mark Salisbury
Comment 2
2013-02-26 09:31:03 PST
Thoughts?
Patrick R. Gansterer
Comment 3
2013-04-06 02:30:09 PDT
Committed
r147835
: <
http://trac.webkit.org/changeset/147835
>
Glenn Adams
Comment 4
2013-04-14 17:03:52 PDT
(In reply to
comment #3
)
> Committed
r147835
: <
http://trac.webkit.org/changeset/147835
>
I notice that this patch was committed without any review. Or if there was a review, it isn't marked anywhere. That's a NO NO!
Glenn Adams
Comment 5
2013-04-14 17:05:53 PDT
(In reply to
comment #4
)
> (In reply to
comment #3
) > > Committed
r147835
: <
http://trac.webkit.org/changeset/147835
> > > I notice that this patch was committed without any review. Or if there was a review, it isn't marked anywhere. That's a NO NO!
That is, either there should be a "Reviewed by" line or an "Unreviewed" line in the ChangeLog.
Mark Salisbury
Comment 6
2013-04-15 08:24:46 PDT
Glenn - thank you for providing feedback. I'll be sure to create patches that have "Unreviewed", "Reviewed by NOBODY (OOPS!)", or "Reviewed by <intended reviewer>" in the ChangeLog.
Rob Buis
Comment 7
2013-05-10 11:51:22 PDT
Comment on
attachment 189435
[details]
Proposed fix Get out of review queue, patch has landed by now.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug