[WinCE] Do not call missing method createDragImageFromImage() https://bugs.webkit.org/show_bug.cgi?id=110421

Patch by Mark Salisbury <mark.salisbury@hp.com> on 2013-04-06

* platform/win/ClipboardWin.cpp:

Canonical link: https://commits.webkit.org/132464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147835 268f45cc-cd09-0410-ab3c-d52691b4dbfc